--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
           subtitle: "The Lyricism of John Lennon and the Legacy of MLK Jr.",
           bullets: [],
           script:
-            "Good morning, everyone. Our presentation examines the universal pursuit of peace, comparing a musical, utopian vision with a real-world struggle for justice. The core theme is the power of **imagination** and **nonviolence** to overcome division.",
+            //"Good morning, everyone. Our presentation examines the universal pursuit of peace, comparing a musical, utopian vision with a real-world struggle for justice. The core theme is the power of *imagination* and *nonviolence* to overcome division."
+            ,
           image:
             "https://i1.sndcdn.com/artworks-000017289777-n5qjf4-t500x500.jpg",
         },
@@ -161,7 +162,7 @@
             "<em>Above us only sky...</em>",
           ],
           script:
-            "Imagine is more than a song; it's a deep philosophical invitation. By challenging traditional religious structures, Lennon encourages us to focus our energy and compassion entirely on the present—on **living for today**, together, under one sky.",
+            "Imagine is more than a song; it's a deep philosophical invitation. By challenging traditional religious structures, Lennon encourages us to focus our energy and compassion entirely on the present—on *living for today*, together, under one sky.",
           image:
             "https://placehold.co/800x400/3B82F6/FFFFFF?text=LENNON%27S+VISION",
         },
@@ -177,7 +178,7 @@
             "<em>And no religion too...</em>",
           ],
           script:
-            "Lennon then addresses the primary causes of global conflict: nationalism and ideology. He argues that borders and dogmas are artificial constructs that lead to war. By eliminating these divisions, there would be **nothing to kill or die for**, and we could all live in **peace**.",
+            "Lennon then addresses the primary causes of global conflict: nationalism and ideology. He argues that borders and dogmas are artificial constructs that lead to war. By eliminating these divisions, there would be *nothing to kill or die for*, and we could all live in *peace*.",
           image:
             "https://placehold.co/800x400/60A5FA/FFFFFF?text=NO+BORDERS+NO+HATE",
         },
@@ -193,7 +194,7 @@
             "<em>A brotherhood of man...</em>",
           ],
           script:
-            "The most radical idea is the rejection of materialism. Lennon posits that by removing ownership and the pursuit of material wealth, we eliminate the root of **greed and hunger**, achieving true **equality** and a **brotherhood of man**. It's a collective call to action: 'I hope someday you'll join us, and the world will be one.'",
+            "The most radical idea is the rejection of materialism. Lennon posits that by removing ownership and the pursuit of material wealth, we eliminate the root of *greed and hunger*, achieving true *equality* and a *brotherhood of man*. It's a collective call to action: 'I hope someday you'll join us, and the world will be one.'",
           image:
             "https://placehold.co/800x400/93C5FD/000000?text=A+BROTHERHOOD+OF+MAN",
         },
@@ -201,13 +202,13 @@
           part: 2,
           themeColor: "border-red-500",
           bgColor: "#fee2e2", // bg-red-50
-          title: "Martin Luther King Jr.: The Champion of Nonviolence",
+          title: "Martin Luther King Jr. : The Champion of Nonviolence",
           bullets: [
-            "<strong>Inspiration:</strong> Christian faith and Gandhi's *Satyagraha* (soul force).",
+            "<strong>Inspiration:</strong> Christian faith and moral soul force.",
             "<strong>Objective:</strong> Legal equality and a fundamental moral change in American society.",
           ],
           script:
-            "Moving from the lyrical dream to the real-world struggle, we discuss Dr. Martin Luther King Jr., the most significant leader of the U.S. Civil Rights Movement. King adopted nonviolence as his primary weapon. His fight was not just for laws, but for the nation's morality. **Nonviolent direct action** was his method to expose and correct injustice.",
+            "Moving from the lyrical dream to the real-world struggle, we discuss Dr. Martin Luther King Jr., the most significant leader of the U.S. Civil Rights Movement. King adopted nonviolence as his primary weapon. His fight was not just for laws, but for the nation's morality. *Nonviolent direct action* was his method to expose and correct injustice.",
           image:
             "https://placehold.co/800x400/EF4444/FFFFFF?text=MLK+NONVIOLENCE+CHAMPION",
         },
@@ -221,7 +222,7 @@
             "<strong>2. Birmingham Campaign (1963):</strong> Exposed police brutality to the world, winning public support.",
           ],
           script:
-            "King’s leadership defined several crucial moments. The **Montgomery Bus Boycott** demonstrated the power of civil disobedience to achieve legal change. The **Birmingham Campaign** exposed the injustice of segregation, generating national support for the cause.",
+            "King’s leadership defined several crucial moments. The *Montgomery Bus Boycott* demonstrated the power of civil disobedience to achieve legal change. The *Birmingham Campaign* exposed the injustice of segregation, generating national support for the cause.",
           image:
             "https://placehold.co/800x400/F87171/FFFFFF?text=CIVIL+RIGHTS+CAMPAIGNS",
         },
@@ -231,12 +232,12 @@
           bgColor: "#fee2e2",
           title: "The Power of the Dream",
           bullets: [
-            "<strong>The March on Washington (1963):</strong> Delivered the famous *'I Have a Dream'* speech. ",
-            "<strong>Core Vision:</strong> People judged 'not by the color of their skin but by the content of their character.'",
+            "<strong>The March on Washington (1963):</strong> Delivered the famous "'I Have a Dream'" speech. ",
+            "<strong>Core Vision:</strong> People judged not by the color of their skin but by the content of their character.",
             "<strong>Legacy:</strong> Led to the Civil Rights Act (1964) and the Nobel Peace Prize (1964).",
           ],
           script:
-            "This leads us to his most famous moment: the March on Washington, where he delivered his iconic 'I Have a Dream' speech. The message was a call for the U.S. to fulfill its promise of freedom. His dream centered on a future where his children would be judged **'by the content of their character'** and not by race. King's commitment to nonviolence directly resulted in the Civil Rights Act and earned him the Nobel Peace Prize.",
+            "This leads us to his most famous moment: the March on Washington, where he delivered his iconic 'I Have a Dream' speech. The message was a call for the U.S. to fulfill its promise of freedom. His dream centered on a future where his children would be judged 'by the content of their character' and not by race. King's commitment to nonviolence directly resulted in the Civil Rights Act and earned him the Nobel Peace Prize.",
           image:
             "https://placehold.co/800x400/FCA5A5/000000?text=I+HAVE+A+DREAM",
         },
@@ -246,11 +247,11 @@
           bgColor: "#ecfdf5", // bg-green-50
           title: "Synthesis: The Vision and the Method",
           bullets: [
-            "<strong>Lennon's *Imagine*</strong> offers the <strong>Utopian Blueprint</strong> (What the world *could* be).",
-            "<strong>King's Leadership</strong> offers the <strong>Moral Framework</strong> (How to *get there* nonviolently).",
+            "<strong>Lennon's *Imagine* </strong> offers the <strong>Utopian Blueprint</strong> (What the world could be).",
+            "<strong>King's Leadership</strong> offers the <strong>Moral Framework</strong> (How to get there nonviolently).",
           ],
           script:
-            "To conclude, let's connect these two figures. Though working in different fields, Lennon and King shared a goal: a world free of division. Lennon gives us the **utopian blueprint** (the vision of what the world could be). King gives us the **moral framework** (the nonviolent path of action) to transform that discord into a symphony of brotherhood.",
+            "To conclude, let's connect these two figures. Though working in different fields, Lennon and King shared a goal: a world free of division. Lennon gives us the *utopian blueprint* (the vision of what the world could be). King gives us the *moral framework* (the nonviolent path of action) to transform that discord into a symphony of brotherhood.",
           image:
             "https://placehold.co/800x400/10B981/FFFFFF?text=VISION+%2B+METHOD",
         },
@@ -261,11 +262,11 @@
           title: "Beyond Dreaming: A Call to Action",
           bullets: [
             "<strong>Shared Lesson:</strong> The biggest obstacles are internal: greed, hatred, and fear.",
-            "<strong>King's Faith:</strong> *“The arc of the moral universe is long, but it bends toward justice.”*",
-            "<strong>Lennon's Invitation:</strong> *“I hope someday you'll join us, and the world will be one.”*",
+            "<strong>King's Faith:</strong> “The arc of the moral universe is long, but it bends toward justice.”",
+            "<strong>Lennon's Invitation:</strong> “I hope someday you'll join us, and the world will be one.”",
           ],
           script:
-            "Both leaders understood that peace requires a shift in our collective consciousness. Nonviolence is the tool to force that change. King's legacy teaches us that the struggle, though long, is winnable through persistent, nonviolent action. Lennon's invitation is the same call to action. We must first **imagine** the world we want, and then, like Dr. King, commit to the action required to build it.",
+            "Both leaders understood that peace requires a shift in our collective consciousness. Nonviolence is the tool to force that change. King's legacy teaches us that the struggle, though long, is winnable through persistent, nonviolent action. Lennon's invitation is the same call to action. We must first *imagine* the world we want, and then, like Dr. King, commit to the action required to build it.",
           image:
             "https://placehold.co/800x400/34D399/FFFFFF?text=THE+CALL+TO+ACTION",
         },
@@ -406,4 +407,5 @@
     </script>
   </body>
 </html>
+
 
