--- a/index.html
+++ b/index.html
@@ -144,9 +144,7 @@
           title: "IMAGINE: A Call for Unity and Global Justice",
           subtitle: "The Lyricism of John Lennon and the Legacy of MLK Jr.",
           bullets: [],
-          script:
-            //"Good morning, everyone. Our presentation examines the universal pursuit of peace, comparing a musical, utopian vision with a real-world struggle for justice. The core theme is the power of *imagination* and *nonviolence* to overcome division."
-            ,
+          script: "" ,
           image:
             "https://i1.sndcdn.com/artworks-000017289777-n5qjf4-t500x500.jpg",
         },
@@ -407,5 +405,6 @@
     </script>
   </body>
 </html>
+
 
 
