--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           title: "IMAGINE: A Call for Unity and Global Justice",
           subtitle: "The Lyricism of John Lennon and the Legacy of MLK Jr.",
           bullets: [],
-          script: "fffffffffffffffff",
+          script: "",
           image:
             "https://i1.sndcdn.com/artworks-000017289777-n5qjf4-t500x500.jpg",
         },
@@ -230,7 +230,7 @@
           bgColor: "#fee2e2",
           title: "The Power of the Dream",
           bullets: [
-            "<strong>The March on Washington (1963):</strong> Delivered the famous "'I Have a Dream'" speech. ",
+            "<strong>The March on Washington (1963):</strong> Delivered the famous 'I Have a Dream' speech. ",
             "<strong>Core Vision:</strong> People judged not by the color of their skin but by the content of their character.",
             "<strong>Legacy:</strong> Led to the Civil Rights Act (1964) and the Nobel Peace Prize (1964).",
           ],
@@ -405,6 +405,7 @@
     </script>
   </body>
 </html>
+
 
 
 
