--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           title: "IMAGINE: A Call for Unity and Global Justice",
           subtitle: "The Lyricism of John Lennon and the Legacy of MLK Jr.",
           bullets: [],
-          script: "",
+          script: "Good morning, everyone. Our presentation examines the universal pursuit of peace, comparing a musical, utopian vision with a real-world struggle for justice. The core theme is the power of *imagination* and *nonviolence* to overcome division.",
           image:
             "https://i1.sndcdn.com/artworks-000017289777-n5qjf4-t500x500.jpg",
         },
@@ -405,6 +405,7 @@
     </script>
   </body>
 </html>
+
 
 
 
